@@ -20,6 +20,7 @@ import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import javafx.scene.input.Clipboard;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
@@ -29,6 +30,8 @@ import javafx.stage.Stage;
 import moodleviewer.model.Category;
 import moodleviewer.model.Question;
 import moodleviewer.model.ClozeQuestion;
+import moodleviewer.parser.GIFTParser;
+import moodleviewer.util.CategoryMerger;
 import moodleviewer.util.I18n;
 import moodleviewer.util.IconFactory;
 import org.kordamp.ikonli.fontawesome5.FontAwesomeSolid;
@@ -37,195 +40,203 @@ import moodleviewer.events.EventBus;
 import moodleviewer.commands.CommandManager;
 import org.controlsfx.control.textfield.CustomTextField;
 
-import java.util.HashSet;
 import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.HashSet;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Set;
 
 /**
- * Clase principal de la aplicación. Gestiona la interfaz, el estado del banco de preguntas
- * y la actualización dinámica de idioma.
+ * Clase principal de la aplicación.
+ *
+ * Cambios respecto a la versión anterior:
+ * - TableManager y TreeManager son ahora instancias (punto I).
+ * - El constructor de TableManager recibe un Supplier<Category> para el submenú "Mover a" (punto B).
+ * - configure() de TableManager recibe la Label del contador (punto D).
+ * - Nuevo botón "Importar GIFT desde portapapeles" (punto C).
+ * - LayoutManager recibe la counterLabel para integrarla bajo la tabla (punto D).
+ * - CORRECCIÓN: Uso de new Locale() compatible con Java 17.
  */
 public class Main extends Application {
 
-    private TreeView<Category> categoryTreeView = new TreeView<>();
-    private TableView<Question> questionTableView = new TableView<>();
-    private WebView detailsWebView = new WebView();
-    
-    private FileManager fileManager = new FileManager();
-    
-    // Botón único de apertura: acepta XML y GIFT, y decide sustituir/combinar según el estado actual.
-    private Button openBankButton = new Button(I18n.get("main.btn.openBank"));
+    // -------------------------------------------------------------------------
+    //  Componentes visuales
+    // -------------------------------------------------------------------------
 
-    private Button saveButton = new Button(I18n.get("main.btn.saveXml"));
-    private Button addQuestionButton = new Button(I18n.get("main.btn.addQuestion"));
-    private Button exportLatexButton = new Button(I18n.get("main.btn.saveLatex"));
-    private Button exportGiftButton = new Button(I18n.get("main.btn.exportGift"));
-    
-    private Button addCategoryButton = new Button(I18n.get("main.btn.addCategory"));
-    private Button statsButton = new Button(I18n.get("main.btn.stats"));
-    private Button duplicatesButton = new Button(I18n.get("main.btn.duplicates"));
-    
-    private Button undoButton = new Button();
-    private Button redoButton = new Button();
-    
-    private CheckBox clozeToggle = new CheckBox(I18n.get("main.toggle.cloze"));
-    
-    private CustomTextField searchCategoryField = new CustomTextField();
-    private CustomTextField searchQuestionField = new CustomTextField();
-    private ComboBox<String> searchCriteriaCombo = new ComboBox<>();
-    private MenuButton typeFilterMenu = new MenuButton(I18n.get("main.filter.type"));
-    
-    private Category currentRootCategory; 
-    private Label fileNameLabel = new Label(I18n.get("main.lbl.noFile"));
-    private Set<String> activeTypeFilters = new HashSet<>(); 
-    
-    private HBox languageBox = new HBox(8);
+    private final TreeView<Category>   categoryTreeView   = new TreeView<>();
+    private final TableView<Question>  questionTableView  = new TableView<>();
+    private final WebView              detailsWebView     = new WebView();
+
+    // Punto D: etiqueta de contador bajo la tabla
+    private final Label counterLabel = new Label();
+
+    private final FileManager fileManager = new FileManager();
+
+    // Punto I: gestores como instancias
+    private final TreeManager  treeManager  = new TreeManager();
+    private       TableManager tableManager;   // se crea en initBasicComponents tras tener el supplier
+
+    private final Button openBankButton    = new Button(I18n.get("main.btn.openBank"));
+    private final Button saveButton        = new Button(I18n.get("main.btn.saveXml"));
+    private final Button addQuestionButton = new Button(I18n.get("main.btn.addQuestion"));
+    private final Button exportLatexButton = new Button(I18n.get("main.btn.saveLatex"));
+    // Punto 3: nombre refleja que siempre abre FileChooser
+    private final Button exportGiftButton  = new Button(I18n.get("main.btn.exportGift"));
+    private final Button addCategoryButton = new Button(I18n.get("main.btn.addCategory"));
+    private final Button statsButton       = new Button(I18n.get("main.btn.stats"));
+    private final Button duplicatesButton  = new Button(I18n.get("main.btn.duplicates"));
+    // Punto C: importar GIFT desde portapapeles
+    private final Button importClipboardButton = new Button(I18n.get("main.btn.importClipboard"));
+    private final Button undoButton        = new Button();
+    private final Button redoButton        = new Button();
+    private final CheckBox clozeToggle     = new CheckBox(I18n.get("main.toggle.cloze"));
+
+    private final CustomTextField searchCategoryField = new CustomTextField();
+    private final CustomTextField searchQuestionField = new CustomTextField();
+    private final ComboBox<String> searchCriteriaCombo = new ComboBox<>();
+    private final MenuButton typeFilterMenu = new MenuButton(I18n.get("main.filter.type"));
+
+    private Category currentRootCategory;
+    private final Label fileNameLabel = new Label(I18n.get("main.lbl.noFile"));
+    private final Set<String> activeTypeFilters = new HashSet<>();
+    private final HBox languageBox = new HBox(8);
     private File loadedFile = null;
+
+    // -------------------------------------------------------------------------
+    //  Ciclo de vida JavaFX
+    // -------------------------------------------------------------------------
 
     @Override
     public void start(Stage primaryStage) {
         primaryStage.setTitle(I18n.get("main.window.title"));
 
         initBasicComponents(primaryStage);
-        
-        // 1. GESTORES DESACOPLADOS: Solo se les pasa su componente visual respectivo
-        TableManager.configure(questionTableView);
-        TreeManager.configure(categoryTreeView);
-        
-        Scene scene = LayoutManager.buildScene(this);
 
-        String css = getClass().getResource("/styles.css").toExternalForm();
-        scene.getStylesheets().add(css);
+        // Punto I: instancias, no estáticos
+        treeManager.configure(categoryTreeView);
+        tableManager.configure(questionTableView, counterLabel);
+
+        Scene scene = LayoutManager.buildScene(this);
+        scene.getStylesheets().add(getClass().getResource("/styles.css").toExternalForm());
 
         primaryStage.setScene(scene);
         primaryStage.setMaximized(true);
-
-        // Evita perder cambios sin guardar al cerrar la ventana por accidente: si el documento
-        // tiene modificaciones pendientes, se pregunta antes de permitir que la aplicación cierre.
         primaryStage.setOnCloseRequest(event -> {
-            if (!confirmDiscardUnsavedChanges(primaryStage)) {
-                event.consume();
-            }
+            if (!confirmDiscardUnsavedChanges(primaryStage)) event.consume();
         });
-
         primaryStage.show();
     }
 
-    /**
-     * Si el documento actual tiene cambios sin guardar (según {@code CommandManager.isDirty()}),
-     * pregunta al usuario qué desea hacer antes de continuar con una operación que los
-     * descartaría (cerrar la aplicación, sustituir el banco actual al abrir uno nuevo, etc.).
-     *
-     * @param stage ventana sobre la que anclar los diálogos (necesaria si el usuario elige guardar).
-     * @return true si la operación que motivó la llamada puede continuar; false si debe cancelarse.
-     */
-    private boolean confirmDiscardUnsavedChanges(Stage stage) {
-        if (!CommandManager.getInstance().isDirty()) {
-            return true;
-        }
-
-        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
-        alert.setTitle(I18n.get("file.dlg.unsavedChanges.title"));
-        alert.setHeaderText(I18n.get("file.dlg.unsavedChanges.header"));
-        alert.setContentText(I18n.get("file.dlg.unsavedChanges.content"));
-
-        ButtonType btnSave = new ButtonType(I18n.get("file.dlg.unsavedChanges.btnSave"), ButtonBar.ButtonData.YES);
-        ButtonType btnDiscard = new ButtonType(I18n.get("file.dlg.unsavedChanges.btnDiscard"), ButtonBar.ButtonData.NO);
-        ButtonType btnCancel = new ButtonType(I18n.get("file.dlg.unsavedChanges.btnCancel"), ButtonBar.ButtonData.CANCEL_CLOSE);
-        alert.getButtonTypes().setAll(btnSave, btnDiscard, btnCancel);
-
-        Optional<ButtonType> choice = alert.showAndWait();
-        if (choice.isEmpty() || choice.get() == btnCancel) {
-            return false;
-        }
-        if (choice.get() == btnSave) {
-            Category preselected = getSelectedTreeCategory();
-            boolean saved = fileManager.saveMoodleXML(stage, currentRootCategory, preselected, loadedFile).isPresent();
-            return saved || !CommandManager.getInstance().isDirty();
-        }
-        return true; // btnDiscard
-    }
+    // -------------------------------------------------------------------------
+    //  Inicialización
+    // -------------------------------------------------------------------------
 
     private void initBasicComponents(Stage stage) {
+
+        // Punto I: TableManager instanciable con supplier de la raíz actual
+        tableManager = new TableManager(() -> currentRootCategory);
+
+        // Buscador de categorías
         searchCategoryField.setPromptText(I18n.get("main.search.category"));
-        searchCategoryField.textProperty().addListener((obs, oldVal, newVal) -> applyCategoryFilter(newVal));
+        searchCategoryField.textProperty().addListener((obs, o, n) -> applyCategoryFilter(n));
         searchCategoryField.setLeft(IconFactory.of(FontAwesomeSolid.SEARCH, 13, "#868e96"));
+        Label clearCat = makeClearButton(searchCategoryField);
+        searchCategoryField.setRight(clearCat);
 
+        // Buscador de preguntas
         searchQuestionField.setPromptText(I18n.get("main.search.question"));
-        searchQuestionField.textProperty().addListener((obs, oldVal, newVal) -> refreshQuestionTable());
+        searchQuestionField.textProperty().addListener((obs, o, n) -> refreshQuestionTable());
         searchQuestionField.setLeft(IconFactory.of(FontAwesomeSolid.SEARCH, 13, "#868e96"));
-        HBox.setHgrow(searchQuestionField, Priority.ALWAYS); 
-        
-        searchCriteriaCombo.setItems(FXCollections.observableArrayList(
-            I18n.get("main.search.byName"), 
-            I18n.get("main.search.byText")
-        ));
-        searchCriteriaCombo.getSelectionModel().selectFirst();
-        searchCriteriaCombo.valueProperty().addListener((obs, oldVal, newVal) -> refreshQuestionTable());
+        Label clearQ = makeClearButton(searchQuestionField);
+        searchQuestionField.setRight(clearQ);
+        HBox.setHgrow(searchQuestionField, Priority.ALWAYS);
 
-        typeFilterMenu.setDisable(true); 
+        searchCriteriaCombo.setItems(FXCollections.observableArrayList(
+                I18n.get("main.search.byName"), I18n.get("main.search.byText")));
+        searchCriteriaCombo.getSelectionModel().selectFirst();
+        searchCriteriaCombo.valueProperty().addListener((obs, o, n) -> refreshQuestionTable());
+
+        typeFilterMenu.setDisable(true);
+
+        // Punto D: estilo del contador
+        counterLabel.setStyle("-fx-font-size: 11px; -fx-text-fill: #6c757d; -fx-padding: 2 10 4 10;");
+
         fileNameLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 14px; -fx-text-fill: #333333;");
 
-        // --- BOTÓN ÚNICO DE APERTURA (XML + GIFT, sustituir o combinar) ---
+        // --- Botón abrir ---
         openBankButton.setId("btn-primary");
         openBankButton.setGraphic(IconFactory.of(FontAwesomeSolid.FOLDER_OPEN, 14, "white"));
         openBankButton.setGraphicTextGap(8);
         openBankButton.setOnAction(e -> handleOpenBank(stage));
 
+        // --- Botón guardar XML ---
         saveButton.setDisable(true);
+        saveButton.setTooltip(new Tooltip(I18n.get("main.btn.saveXml.tooltip.new")));
         saveButton.setOnAction(e -> {
-            Category preselected = getSelectedTreeCategory();
-            Optional<File> savedFile = fileManager.saveMoodleXML(stage, currentRootCategory, preselected, loadedFile);
-            savedFile.ifPresent(file -> {
-                loadedFile = file;
-                fileNameLabel.setText(I18n.get("main.lbl.currentFile", loadedFile.getName()));
-            });
+            Category pre = getSelectedTreeCategory();
+            fileManager.saveMoodleXML(stage, currentRootCategory, pre, loadedFile)
+                    .ifPresent(f -> {
+                        loadedFile = f;
+                        updateFileNameLabel();
+                        saveButton.setTooltip(new Tooltip(
+                                I18n.get("main.btn.saveXml.tooltip.overwrite", f.getName())));
+                    });
         });
 
+        // --- Botón añadir pregunta ---
         addQuestionButton.setDisable(true);
         addQuestionButton.setOnAction(e -> showAddQuestionDialog());
         addQuestionButton.setId("btn-success");
         addQuestionButton.setGraphic(IconFactory.of(FontAwesomeSolid.PLUS, 14, "white"));
         addQuestionButton.setGraphicTextGap(8);
-        
-        exportLatexButton.setDisable(true);
-        exportLatexButton.setOnAction(e -> fileManager.exportLaTeX(stage, currentRootCategory, getSelectedTreeCategory()));
 
+        // --- Botón exportar LaTeX ---
+        exportLatexButton.setDisable(true);
+        exportLatexButton.setOnAction(e ->
+                fileManager.exportLaTeX(stage, currentRootCategory, getSelectedTreeCategory()));
+
+        // --- Botón exportar GIFT ---
         exportGiftButton.setDisable(true);
         exportGiftButton.setOnAction(e -> {
-            if (currentRootCategory != null) {
+            if (currentRootCategory != null)
                 fileManager.exportGIFT(stage, currentRootCategory, getSelectedTreeCategory());
-            }
         });
 
+        // --- Botón añadir categoría ---
         addCategoryButton.setDisable(true);
         addCategoryButton.setOnAction(e -> showAddCategoryDialog());
         addCategoryButton.setId("btn-success");
         addCategoryButton.setGraphic(IconFactory.of(FontAwesomeSolid.PLUS, 14, "white"));
         addCategoryButton.setGraphicTextGap(8);
 
+        // --- Estadísticas ---
         statsButton.setDisable(true);
         statsButton.setGraphic(IconFactory.of(FontAwesomeSolid.CHART_BAR, 14, "#495057"));
         statsButton.setGraphicTextGap(8);
         statsButton.setOnAction(e -> {
-            if (currentRootCategory != null) {
-                DashboardDialog dashboard = new DashboardDialog(currentRootCategory);
-                dashboard.showAndWait();
-            }
+            if (currentRootCategory != null)
+                new DashboardDialog(currentRootCategory).showAndWait();
         });
 
+        // --- Duplicados ---
         duplicatesButton.setDisable(true);
         duplicatesButton.setGraphic(IconFactory.of(FontAwesomeSolid.CLONE, 14, "#495057"));
         duplicatesButton.setGraphicTextGap(8);
         duplicatesButton.setOnAction(e -> {
-            if (currentRootCategory != null) {
+            if (currentRootCategory != null)
                 DuplicateQuestionsDialog.showDuplicates(currentRootCategory);
-            }
         });
 
-        // --- BOTONES DESHACER / REHACER ---
+        // --- Punto C: Importar GIFT desde portapapeles ---
+        importClipboardButton.setDisable(true);
+        importClipboardButton.setGraphic(IconFactory.of(FontAwesomeSolid.PASTE, 14, "#495057"));
+        importClipboardButton.setGraphicTextGap(8);
+        importClipboardButton.setTooltip(new Tooltip(I18n.get("main.btn.importClipboard.tooltip")));
+        importClipboardButton.setOnAction(e -> handleImportFromClipboard());
+
+        // --- Deshacer / Rehacer ---
         undoButton.setGraphic(IconFactory.of(FontAwesomeSolid.UNDO, 16, "#495057"));
         undoButton.setTooltip(new Tooltip(I18n.get("main.btn.undo.tooltip")));
         undoButton.setStyle("-fx-padding: 0 10 0 10;");
@@ -241,37 +252,38 @@ public class Main extends Application {
         EventBus.getInstance().subscribe(AppEvents.UndoRedoStateChangedEvent.class, event -> {
             undoButton.setDisable(!event.canUndo());
             redoButton.setDisable(!event.canRedo());
+            updateFileNameLabel();
         });
 
+        // --- Toggle Cloze ---
         clozeToggle.setVisible(false);
-        clozeToggle.setStyle("-fx-background-color: rgba(255, 255, 255, 0.95); -fx-text-fill: #1177d1; -fx-font-weight: bold; -fx-padding: 6 10 6 10; -fx-border-color: #dee2e6; -fx-border-radius: 4; -fx-background-radius: 4; -fx-cursor: hand; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 3, 0, 0, 1);");
-        clozeToggle.selectedProperty().addListener((obs, old, isSelected) -> {
-            ClozeQuestion.MODO_PREVIA_ALUMNO = isSelected;
-            Question current = questionTableView.getSelectionModel().getSelectedItem();
-            if (current != null) {
-                detailsWebView.getEngine().loadContent(current.getDetails());
-            }
+        clozeToggle.setStyle("-fx-background-color: rgba(255,255,255,0.95); -fx-text-fill: #1177d1; "
+                + "-fx-font-weight: bold; -fx-padding: 6 10 6 10; -fx-border-color: #dee2e6; "
+                + "-fx-border-radius: 4; -fx-background-radius: 4; -fx-cursor: hand; "
+                + "-fx-effect: dropshadow(three-pass-box,rgba(0,0,0,0.1),3,0,0,1);");
+        clozeToggle.selectedProperty().addListener((obs, old, sel) -> {
+            ClozeQuestion.MODO_PREVIA_ALUMNO = sel;
+            Question cur = questionTableView.getSelectionModel().getSelectedItem();
+            if (cur != null) detailsWebView.getEngine().loadContent(cur.getDetails());
         });
 
-        // 2. BUS DE EVENTOS
+        // --- Bus de eventos ---
         EventBus.getInstance().subscribe(AppEvents.CategorySelectedEvent.class, event -> {
             refreshQuestionTable();
             detailsWebView.getEngine().loadContent("");
             clozeToggle.setVisible(false);
         });
-
         EventBus.getInstance().subscribe(AppEvents.CategoryUpdatedEvent.class, event -> {
             applyCategoryFilter(searchCategoryField.getText());
-            refreshQuestionTable(); 
+            refreshQuestionTable();
         });
-
         EventBus.getInstance().subscribe(AppEvents.QuestionDeletedEvent.class, event -> {
-            refreshQuestionTable(); 
-            categoryTreeView.refresh(); 
-            populateTypeFilterMenu(currentRootCategory); 
+            refreshQuestionTable();
+            categoryTreeView.refresh();
+            populateTypeFilterMenu(currentRootCategory);
         });
 
-        questionTableView.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> {
+        questionTableView.getSelectionModel().selectedItemProperty().addListener((obs, o, newVal) -> {
             if (newVal != null) {
                 clozeToggle.setVisible(newVal instanceof ClozeQuestion);
                 detailsWebView.getEngine().loadContent(newVal.getDetails());
@@ -281,93 +293,351 @@ public class Main extends Application {
             }
         });
 
-        double flagWidth = 21;
-        double flagHeight = 14;
-
-        javafx.scene.Node nodeEs;
-        try {
-            ImageView imgEs = new ImageView(new Image(getClass().getResourceAsStream("/es.png")));
-            imgEs.setFitWidth(flagWidth);
-            imgEs.setFitHeight(flagHeight);
-            imgEs.setPreserveRatio(false);
-            imgEs.setStyle("-fx-cursor: hand;");
-            nodeEs = imgEs;
-        } catch (Exception ex) {
-            Label lblEs = new Label("🇪🇸");
-            lblEs.setStyle("-fx-cursor: hand; -fx-font-size: 14px;");
-            nodeEs = lblEs;
-        }
-        nodeEs.setOnMouseClicked(e -> { I18n.setLocale(Locale.of("es", "ES")); updateLanguage(stage); });
-
-        javafx.scene.Node nodeEn;
-        try {
-            ImageView imgEn = new ImageView(new Image(getClass().getResourceAsStream("/uk.png")));
-            imgEn.setFitWidth(flagWidth);
-            imgEn.setFitHeight(flagHeight);
-            imgEn.setPreserveRatio(false);
-            imgEn.setStyle("-fx-cursor: hand;");
-            nodeEn = imgEn;
-        } catch (Exception ex) {
-            Label lblEn = new Label("🇬🇧");
-            lblEn.setStyle("-fx-cursor: hand; -fx-font-size: 14px;");
-            nodeEn = lblEn;
-        }
-        nodeEn.setOnMouseClicked(e -> { I18n.setLocale(Locale.of("en", "GB")); updateLanguage(stage); });
-
-        languageBox.getChildren().addAll(nodeEs, nodeEn);
+        // --- Banderas de idioma (CORRECCIÓN Java 17) ---
+        double fw = 21, fh = 14;
+        languageBox.getChildren().addAll(
+                buildFlagNode("/es.png", "🇪🇸", fw, fh,
+                        () -> { I18n.setLocale(new Locale("es","ES")); updateLanguage(stage); }),
+                buildFlagNode("/uk.png", "🇬🇧", fw, fh,
+                        () -> { I18n.setLocale(new Locale("en","GB")); updateLanguage(stage); })
+        );
         languageBox.setAlignment(Pos.CENTER);
     }
 
-    /**
-     * Maneja la apertura unificada del banco: delega la elección de fichero, formato y, si ya
-     * había un banco cargado, la decisión de sustituir o combinar en {@code FileManager}.
-     * Tras una sustitución, limpia el historial de deshacer/rehacer (es un documento nuevo);
-     * tras una combinación, lo conserva (es una modificación del documento actual).
-     */
+    // -------------------------------------------------------------------------
+    //  Punto C: importar GIFT desde portapapeles
+    // -------------------------------------------------------------------------
+
+    private void handleImportFromClipboard() {
+        String text = Clipboard.getSystemClipboard().getString();
+        if (text == null || text.isBlank()) {
+            new Alert(Alert.AlertType.WARNING,
+                    I18n.get("gift.clipboard.empty")).showAndWait();
+            return;
+        }
+
+        // Mostramos una vista previa del texto en un diálogo de confirmación
+        Alert preview = new Alert(Alert.AlertType.CONFIRMATION);
+        preview.setTitle(I18n.get("gift.clipboard.title"));
+        preview.setHeaderText(I18n.get("gift.clipboard.header"));
+
+        TextArea ta = new TextArea(text.length() > 800
+                ? text.substring(0, 800) + "\n…" : text);
+        ta.setEditable(false);
+        ta.setWrapText(true);
+        ta.setPrefRowCount(10);
+        preview.getDialogPane().setContent(ta);
+        preview.getDialogPane().setPrefWidth(560);
+        preview.setResizable(true);
+
+        ButtonType btnImport = new ButtonType(I18n.get("gift.clipboard.btnImport"),
+                ButtonBar.ButtonData.OK_DONE);
+        preview.getButtonTypes().setAll(btnImport, ButtonType.CANCEL);
+
+        Optional<ButtonType> choice = preview.showAndWait();
+        if (choice.isEmpty() || choice.get() != btnImport) return;
+
+        // Escribimos el texto a un fichero temporal y lo parseamos con GIFTParser
+        try {
+            File tmp = File.createTempFile("moodleviewer_clipboard_", ".txt");
+            tmp.deleteOnExit();
+            Files.writeString(tmp.toPath(), text, java.nio.charset.StandardCharsets.UTF_8);
+
+            GIFTParser.GiftImportResult result = GIFTParser.parseGIFTWithReport(tmp);
+            Category imported = result.rootCategory();
+
+            // Destino: categoría seleccionada o raíz
+            TreeItem<Category> sel = categoryTreeView.getSelectionModel().getSelectedItem();
+            Category dest = (sel != null && sel.getValue() != null)
+                    ? sel.getValue() : currentRootCategory;
+
+            int added = CategoryMerger.merge(dest, imported);
+            CommandManager.getInstance().markAsDirty();
+            applyCategoryFilter(searchCategoryField.getText());
+            refreshQuestionTable();
+            populateTypeFilterMenu(currentRootCategory);
+
+            // Informar sobre resultados e issues
+            if (result.issues().isEmpty()) {
+                new Alert(Alert.AlertType.INFORMATION,
+                        I18n.get("gift.clipboard.success", added)).showAndWait();
+            } else {
+                StringBuilder sb = new StringBuilder(
+                        I18n.get("gift.clipboard.successWithIssues", added,
+                                result.issues().size())).append("\n\n");
+                result.issues().forEach(iss ->
+                        sb.append("• ").append(I18n.get("gift.issues.line", iss.startLine()))
+                          .append(": ").append(iss.blockPreview()).append("\n"));
+                Alert warn = new Alert(Alert.AlertType.WARNING);
+                warn.setTitle(I18n.get("gift.issues.title"));
+                warn.setHeaderText(I18n.get("gift.clipboard.header"));
+                TextArea issueArea = new TextArea(sb.toString());
+                issueArea.setEditable(false);
+                issueArea.setPrefRowCount(8);
+                warn.getDialogPane().setContent(issueArea);
+                warn.setResizable(true);
+                warn.showAndWait();
+            }
+        } catch (IOException ex) {
+            new Alert(Alert.AlertType.ERROR,
+                    I18n.get("file.err.readBank", ex.getMessage())).showAndWait();
+        } catch (Exception ex) {
+            new Alert(Alert.AlertType.ERROR,
+                    I18n.get("file.err.readBank", ex.getMessage())).showAndWait();
+        }
+    }
+
+    // -------------------------------------------------------------------------
+    //  Apertura de banco
+    // -------------------------------------------------------------------------
+
     private void handleOpenBank(Stage stage) {
+        boolean hasBank = currentRootCategory != null
+                && (!currentRootCategory.getQuestions().isEmpty()
+                    || !currentRootCategory.getSubcategories().isEmpty());
+        if (hasBank && !confirmDiscardUnsavedChanges(stage)) return;
+
         Optional<FileManager.OpenResult> result = fileManager.openOrMergeBank(stage, currentRootCategory);
-        if (result.isEmpty()) {
-            return;
+        if (result.isEmpty()) return;
+
+        FileManager.OpenResult open = result.get();
+        currentRootCategory = open.rootCategory();
+        loadedFile = open.file();
+        updateFileNameLabel();
+
+        if (loadedFile != null && loadedFile.getName().toLowerCase().endsWith(".xml")) {
+            saveButton.setTooltip(new Tooltip(
+                    I18n.get("main.btn.saveXml.tooltip.overwrite", loadedFile.getName())));
+        } else {
+            saveButton.setTooltip(new Tooltip(I18n.get("main.btn.saveXml.tooltip.new")));
         }
-
-        FileManager.OpenResult openResult = result.get();
-
-        // Si la operación va a SUSTITUIR el banco actual (no a combinarlo) y ese banco tenía
-        // cambios sin guardar, se avisa justo antes de aplicar el resultado. Se pregunta aquí,
-        // después de que el usuario ya haya elegido "sustituir" en FileManager, para no
-        // encadenar dos confirmaciones distintas cuando lo que realmente quiere es combinar
-        // (donde no se pierde nada y no hay nada que avisar).
-        if (!openResult.wasMerge() && !confirmDiscardUnsavedChanges(stage)) {
-            return;
-        }
-
-        currentRootCategory = openResult.rootCategory();
-        loadedFile = openResult.file();
-        fileNameLabel.setText(I18n.get("main.lbl.currentFile", loadedFile.getName()));
 
         populateTypeFilterMenu(currentRootCategory);
-        categoryTreeView.setRoot(TreeBuilder.createTreeItem(currentRootCategory));
+        applyCategoryFilter(searchCategoryField.getText());
         categoryTreeView.setShowRoot(false);
         refreshQuestionTable();
 
-        if (!openResult.wasMerge()) {
-            // Sustitución: es un documento nuevo, no tiene sentido conservar el historial
-            // de deshacer/rehacer ni el estado "modificado" de un banco que ya no existe.
+        if (!open.wasMerge()) {
             questionTableView.getItems().clear();
             detailsWebView.getEngine().loadContent("");
             CommandManager.getInstance().clear();
         }
-        // Si fue una combinación, FileManager ya ha marcado el documento como modificado
-        // (markAsDirty) y el historial de deshacer/rehacer se conserva intacto.
 
-        saveButton.setDisable(false);
-        addQuestionButton.setDisable(false);
-        addCategoryButton.setDisable(false);
-        exportLatexButton.setDisable(false);
-        exportGiftButton.setDisable(false);
-        statsButton.setDisable(false);
-        duplicatesButton.setDisable(false);
+        setControlsEnabled(true);
     }
+
+    private void setControlsEnabled(boolean enabled) {
+        saveButton.setDisable(!enabled);
+        addQuestionButton.setDisable(!enabled);
+        addCategoryButton.setDisable(!enabled);
+        exportLatexButton.setDisable(!enabled);
+        exportGiftButton.setDisable(!enabled);
+        statsButton.setDisable(!enabled);
+        duplicatesButton.setDisable(!enabled);
+        importClipboardButton.setDisable(!enabled);
+    }
+
+    // -------------------------------------------------------------------------
+    //  Cambios sin guardar
+    // -------------------------------------------------------------------------
+
+    private boolean confirmDiscardUnsavedChanges(Stage stage) {
+        if (!CommandManager.getInstance().isDirty()) return true;
+
+        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
+        alert.setTitle(I18n.get("file.dlg.unsavedChanges.title"));
+        alert.setHeaderText(I18n.get("file.dlg.unsavedChanges.header"));
+        alert.setContentText(I18n.get("file.dlg.unsavedChanges.content"));
+
+        ButtonType btnSave    = new ButtonType(I18n.get("file.dlg.unsavedChanges.btnSave"),    ButtonBar.ButtonData.YES);
+        ButtonType btnDiscard = new ButtonType(I18n.get("file.dlg.unsavedChanges.btnDiscard"), ButtonBar.ButtonData.NO);
+        ButtonType btnCancel  = new ButtonType(I18n.get("file.dlg.unsavedChanges.btnCancel"),  ButtonBar.ButtonData.CANCEL_CLOSE);
+        alert.getButtonTypes().setAll(btnSave, btnDiscard, btnCancel);
+
+        Optional<ButtonType> choice = alert.showAndWait();
+        if (choice.isEmpty() || choice.get() == btnCancel) return false;
+        if (choice.get() == btnSave) {
+            boolean saved = fileManager.saveMoodleXML(
+                    stage, currentRootCategory, getSelectedTreeCategory(), loadedFile).isPresent();
+            return saved || !CommandManager.getInstance().isDirty();
+        }
+        return true;
+    }
+
+    // -------------------------------------------------------------------------
+    //  Punto 5: label con asterisco
+    // -------------------------------------------------------------------------
+
+    private void updateFileNameLabel() {
+        String base = loadedFile == null
+                ? I18n.get("main.lbl.noFile")
+                : I18n.get("main.lbl.currentFile", loadedFile.getName());
+        boolean dirty = CommandManager.getInstance().isDirty();
+        fileNameLabel.setText(dirty ? "* " + base : base);
+        fileNameLabel.setStyle(dirty
+                ? "-fx-font-weight: bold; -fx-font-size: 14px; -fx-text-fill: #c0392b;"
+                : "-fx-font-weight: bold; -fx-font-size: 14px; -fx-text-fill: #333333;");
+    }
+
+    // -------------------------------------------------------------------------
+    //  Filtro y refresco
+    // -------------------------------------------------------------------------
+
+    public void applyCategoryFilter(String searchText) {
+        if (currentRootCategory == null) return;
+        TreeItem<Category> prev = categoryTreeView.getSelectionModel().getSelectedItem();
+        Category prevCat = prev != null ? prev.getValue() : null;
+
+        TreeItem<Category> newRoot = (searchText == null || searchText.isBlank())
+                ? TreeBuilder.createTreeItem(currentRootCategory)
+                : TreeBuilder.createFilteredTreeItem(currentRootCategory, searchText.toLowerCase());
+        categoryTreeView.setRoot(newRoot);
+
+        if (prevCat != null && newRoot != null) {
+            TreeItem<Category> match = findTreeItem(newRoot, prevCat);
+            if (match != null) {
+                categoryTreeView.getSelectionModel().select(match);
+            } else {
+                categoryTreeView.getSelectionModel().clearSelection();
+                questionTableView.setItems(FXCollections.observableArrayList());
+                detailsWebView.getEngine().loadContent("");
+                clozeToggle.setVisible(false);
+            }
+        }
+    }
+
+    private TreeItem<Category> findTreeItem(TreeItem<Category> node, Category target) {
+        if (node == null) return null;
+        if (node.getValue() == target) return node;
+        for (TreeItem<Category> child : node.getChildren()) {
+            TreeItem<Category> f = findTreeItem(child, target);
+            if (f != null) return f;
+        }
+        return null;
+    }
+
+    public void refreshQuestionTable() {
+        TreeItem<Category> sel = categoryTreeView.getSelectionModel().getSelectedItem();
+        if (sel != null && sel.getValue() != null) {
+            Category cat = sel.getValue();
+            ObservableList<Question> obs = FXCollections.observableArrayList(cat.getQuestions());
+            FilteredList<Question> filtered = new FilteredList<>(obs, q -> {
+                boolean matchesType = activeTypeFilters.isEmpty()
+                        || activeTypeFilters.contains(q.getType());
+                String txt = searchQuestionField.getText();
+                if (txt == null || txt.isBlank()) return matchesType;
+                String low = txt.toLowerCase();
+                int idx = searchCriteriaCombo.getSelectionModel().getSelectedIndex();
+                boolean matchesTxt = idx == 0
+                        ? q.getName().toLowerCase().contains(low)
+                        : q.getText() != null && q.getText().toLowerCase().contains(low);
+                return matchesTxt && matchesType;
+            });
+            SortedList<Question> sorted = new SortedList<>(filtered);
+            sorted.comparatorProperty().bind(questionTableView.comparatorProperty());
+            questionTableView.setItems(sorted);
+        } else {
+            questionTableView.setItems(FXCollections.observableArrayList());
+        }
+    }
+
+    // -------------------------------------------------------------------------
+    //  Filtro por tipo
+    // -------------------------------------------------------------------------
+
+    private void populateTypeFilterMenu(Category root) {
+        typeFilterMenu.getItems().clear();
+        activeTypeFilters.clear();
+        updateFilterButtonStyle();
+        Set<String> types = new HashSet<>();
+        collectTypes(root, types);
+        types.forEach(type -> {
+            CheckMenuItem item = new CheckMenuItem(type.toUpperCase());
+            item.selectedProperty().addListener((obs, was, is) -> {
+                if (is) activeTypeFilters.add(type); else activeTypeFilters.remove(type);
+                updateFilterButtonStyle();
+                refreshQuestionTable();
+            });
+            typeFilterMenu.getItems().add(item);
+        });
+        typeFilterMenu.setDisable(false);
+    }
+
+    private void collectTypes(Category cat, Set<String> out) {
+        cat.getQuestions().forEach(q -> out.add(q.getType()));
+        cat.getSubcategories().forEach(s -> collectTypes(s, out));
+    }
+
+    private void updateFilterButtonStyle() {
+        if (activeTypeFilters.isEmpty()) {
+            typeFilterMenu.setStyle("");
+            typeFilterMenu.setText(I18n.get("main.filter.type"));
+        } else {
+            typeFilterMenu.setStyle("-fx-background-color:#dc3545;-fx-border-color:#c82333;"
+                    + "-fx-text-fill:white;-fx-font-weight:bold;");
+            typeFilterMenu.setText(I18n.get("main.filter.typeActive",
+                    String.valueOf(activeTypeFilters.size())));
+        }
+    }
+
+    // -------------------------------------------------------------------------
+    //  Diálogos
+    // -------------------------------------------------------------------------
+
+    private void showAddQuestionDialog() {
+        TreeItem<Category> sel = categoryTreeView.getSelectionModel().getSelectedItem();
+        if (sel == null) {
+            new Alert(Alert.AlertType.WARNING, I18n.get("main.alert.selectCat")).showAndWait();
+            return;
+        }
+        new AddQuestionDialog(sel.getValue()).showAndWait();
+        populateTypeFilterMenu(currentRootCategory);
+        refreshQuestionTable();
+        categoryTreeView.refresh();
+    }
+
+    private void showAddCategoryDialog() {
+        if (currentRootCategory == null) return;
+        TreeItem<Category> selItem = categoryTreeView.getSelectionModel().getSelectedItem();
+        Category parentCat = selItem != null ? selItem.getValue() : currentRootCategory;
+
+        Dialog<String> dialog = new Dialog<>();
+        dialog.setTitle(I18n.get("main.dlg.cat.title"));
+        dialog.setHeaderText(I18n.get("main.dlg.cat.header"));
+        ButtonType btnOk = new ButtonType(I18n.get("main.dlg.btnAccept"), ButtonBar.ButtonData.OK_DONE);
+        dialog.getDialogPane().getButtonTypes().addAll(btnOk, ButtonType.CANCEL);
+
+        GridPane grid = new GridPane();
+        grid.setHgap(10); grid.setVgap(10);
+        grid.setPadding(new Insets(20, 150, 10, 10));
+        TextField nameField = new TextField();
+        ToggleGroup tg = new ToggleGroup();
+        RadioButton rbRoot = new RadioButton(I18n.get("main.dlg.cat.root"));
+        RadioButton rbSub  = new RadioButton(I18n.get("main.dlg.cat.sub",
+                selItem != null ? parentCat.getName() : ""));
+        rbRoot.setToggleGroup(tg); rbSub.setToggleGroup(tg);
+        if (selItem != null) rbSub.setSelected(true);
+        else { rbRoot.setSelected(true); rbSub.setDisable(true); }
+        grid.add(new Label(I18n.get("main.dlg.cat.location")), 0, 0);
+        grid.add(new VBox(5, rbRoot, rbSub), 1, 0);
+        grid.add(new Label(I18n.get("main.dlg.cat.name")), 0, 1);
+        grid.add(nameField, 1, 1);
+        dialog.getDialogPane().setContent(grid);
+        dialog.setResultConverter(bt -> {
+            if (bt == btnOk && !nameField.getText().isBlank()) {
+                Category newCat = new Category(nameField.getText().trim());
+                if (rbRoot.isSelected()) currentRootCategory.getSubcategories().add(newCat);
+                else parentCat.getSubcategories().add(newCat);
+                applyCategoryFilter(searchCategoryField.getText());
+            }
+            return null;
+        });
+        dialog.showAndWait();
+    }
+
+    // -------------------------------------------------------------------------
+    //  Cambio de idioma
+    // -------------------------------------------------------------------------
 
     private void updateLanguage(Stage stage) {
         stage.setTitle(I18n.get("main.window.title"));
@@ -377,26 +647,29 @@ public class Main extends Application {
         exportLatexButton.setText(I18n.get("main.btn.saveLatex"));
         exportGiftButton.setText(I18n.get("main.btn.exportGift"));
         addCategoryButton.setText(I18n.get("main.btn.addCategory"));
-        statsButton.setText(I18n.get("main.btn.stats")); 
+        statsButton.setText(I18n.get("main.btn.stats"));
         duplicatesButton.setText(I18n.get("main.btn.duplicates"));
+        importClipboardButton.setText(I18n.get("main.btn.importClipboard"));
+        importClipboardButton.setTooltip(new Tooltip(I18n.get("main.btn.importClipboard.tooltip")));
         undoButton.getTooltip().setText(I18n.get("main.btn.undo.tooltip"));
         redoButton.getTooltip().setText(I18n.get("main.btn.redo.tooltip"));
         clozeToggle.setText(I18n.get("main.toggle.cloze"));
         searchCategoryField.setPromptText(I18n.get("main.search.category"));
         searchQuestionField.setPromptText(I18n.get("main.search.question"));
-        
-        int selectedIndex = searchCriteriaCombo.getSelectionModel().getSelectedIndex();
+
+        int idx = searchCriteriaCombo.getSelectionModel().getSelectedIndex();
         searchCriteriaCombo.setItems(FXCollections.observableArrayList(
-            I18n.get("main.search.byName"), 
-            I18n.get("main.search.byText")
-        ));
-        searchCriteriaCombo.getSelectionModel().select(Math.max(0, selectedIndex));
-        
-        if (loadedFile == null) fileNameLabel.setText(I18n.get("main.lbl.noFile"));
-        else fileNameLabel.setText(I18n.get("main.lbl.currentFile", loadedFile.getName()));
-        
+                I18n.get("main.search.byName"), I18n.get("main.search.byText")));
+        searchCriteriaCombo.getSelectionModel().select(Math.max(0, idx));
+
+        updateFileNameLabel();
+        if (loadedFile != null && loadedFile.getName().toLowerCase().endsWith(".xml")) {
+            saveButton.setTooltip(new Tooltip(
+                    I18n.get("main.btn.saveXml.tooltip.overwrite", loadedFile.getName())));
+        } else {
+            saveButton.setTooltip(new Tooltip(I18n.get("main.btn.saveXml.tooltip.new")));
+        }
         updateFilterButtonStyle();
-        
         if (!questionTableView.getColumns().isEmpty()) {
             questionTableView.getColumns().get(0).setText(I18n.get("table.col.name"));
             questionTableView.getColumns().get(1).setText(I18n.get("table.col.type"));
@@ -405,185 +678,69 @@ public class Main extends Application {
         questionTableView.refresh();
     }
 
+    // -------------------------------------------------------------------------
+    //  Utilidades
+    // -------------------------------------------------------------------------
+
+    private Label makeClearButton(CustomTextField field) {
+        Label btn = new Label("×");
+        btn.setStyle("-fx-cursor:hand;-fx-text-fill:#868e96;-fx-font-size:14px;-fx-padding:0 4 0 0;");
+        btn.setOnMouseClicked(e -> field.clear());
+        btn.visibleProperty().bind(field.textProperty().isNotEmpty());
+        btn.managedProperty().bind(field.textProperty().isNotEmpty());
+        return btn;
+    }
+
+    private javafx.scene.Node buildFlagNode(String resource, String emoji,
+                                            double w, double h, Runnable action) {
+        try {
+            ImageView img = new ImageView(
+                    new Image(getClass().getResourceAsStream(resource)));
+            img.setFitWidth(w); img.setFitHeight(h);
+            img.setPreserveRatio(false);
+            img.setStyle("-fx-cursor:hand;");
+            img.setOnMouseClicked(e -> action.run());
+            return img;
+        } catch (Exception ex) {
+            Label lbl = new Label(emoji);
+            lbl.setStyle("-fx-cursor:hand;-fx-font-size:14px;");
+            lbl.setOnMouseClicked(e -> action.run());
+            return lbl;
+        }
+    }
+
     private Category getSelectedTreeCategory() {
-        TreeItem<Category> selectedItem = categoryTreeView.getSelectionModel().getSelectedItem();
-        if (selectedItem == null) return null;
-        Category category = selectedItem.getValue();
-        return (category == currentRootCategory) ? null : category;
+        TreeItem<Category> sel = categoryTreeView.getSelectionModel().getSelectedItem();
+        if (sel == null) return null;
+        return sel.getValue() == currentRootCategory ? null : sel.getValue();
     }
 
-    private void showAddCategoryDialog() {
-        if (currentRootCategory == null) return;
-        TreeItem<Category> selectedItem = categoryTreeView.getSelectionModel().getSelectedItem();
-        Category parentCategory = (selectedItem != null) ? selectedItem.getValue() : currentRootCategory;
-        Dialog<String> dialog = new Dialog<>();
-        dialog.setTitle(I18n.get("main.dlg.cat.title"));
-        dialog.setHeaderText(I18n.get("main.dlg.cat.header"));
-        ButtonType btnAceptar = new ButtonType(I18n.get("main.dlg.btnAccept"), ButtonBar.ButtonData.OK_DONE);
-        dialog.getDialogPane().getButtonTypes().addAll(btnAceptar, ButtonType.CANCEL);
-        GridPane grid = new GridPane();
-        grid.setHgap(10); grid.setVgap(10);
-        grid.setPadding(new Insets(20, 150, 10, 10));
-        TextField nameField = new TextField();
-        ToggleGroup group = new ToggleGroup();
-        RadioButton rbRoot = new RadioButton(I18n.get("main.dlg.cat.root"));
-        RadioButton rbSub = new RadioButton(I18n.get("main.dlg.cat.sub", (selectedItem != null ? parentCategory.getName() : "")));
-        rbRoot.setToggleGroup(group); rbSub.setToggleGroup(group);
-        if (selectedItem != null) rbSub.setSelected(true); else { rbRoot.setSelected(true); rbSub.setDisable(true); }
-        grid.add(new Label(I18n.get("main.dlg.cat.location")), 0, 0);
-        grid.add(new VBox(5, rbRoot, rbSub), 1, 0);
-        grid.add(new Label(I18n.get("main.dlg.cat.name")), 0, 1);
-        grid.add(nameField, 1, 1);
-        dialog.getDialogPane().setContent(grid);
-        dialog.setResultConverter(db -> {
-            if (db == btnAceptar && !nameField.getText().trim().isEmpty()) {
-                Category newCat = new Category(nameField.getText().trim());
-                if (rbRoot.isSelected()) currentRootCategory.getSubcategories().add(newCat);
-                else parentCategory.getSubcategories().add(newCat);
-                applyCategoryFilter(searchCategoryField.getText());
-            }
-            return null;
-        });
-        dialog.showAndWait();
-    }
+    // -------------------------------------------------------------------------
+    //  Getters para LayoutManager
+    // -------------------------------------------------------------------------
 
-    private void showAddQuestionDialog() {
-        TreeItem<Category> selectedCategoryItem = categoryTreeView.getSelectionModel().getSelectedItem();
-        if (selectedCategoryItem == null) {
-            new Alert(Alert.AlertType.WARNING, I18n.get("main.alert.selectCat")).showAndWait();
-            return;
-        }
-        Category targetCategory = selectedCategoryItem.getValue();
-        AddQuestionDialog dialog = new AddQuestionDialog(targetCategory);
-        
-        dialog.showAndWait();
-        
-        populateTypeFilterMenu(currentRootCategory);
-        refreshQuestionTable();
-        categoryTreeView.refresh(); 
-    }
-
-    public void applyCategoryFilter(String searchText) {
-        if (currentRootCategory == null) return;
-
-        TreeItem<Category> previouslySelected = categoryTreeView.getSelectionModel().getSelectedItem();
-        Category categoryToReselect = (previouslySelected != null) ? previouslySelected.getValue() : null;
-
-        TreeItem<Category> newRoot;
-        if (searchText == null || searchText.trim().isEmpty()) {
-            newRoot = TreeBuilder.createTreeItem(currentRootCategory);
-        } else {
-            newRoot = TreeBuilder.createFilteredTreeItem(currentRootCategory, searchText.toLowerCase());
-        }
-        categoryTreeView.setRoot(newRoot);
-
-        if (categoryToReselect != null && newRoot != null) {
-            TreeItem<Category> match = findTreeItemByCategory(newRoot, categoryToReselect);
-            if (match != null) {
-                categoryTreeView.getSelectionModel().select(match);
-            }
-        }
-    }
-
-    private TreeItem<Category> findTreeItemByCategory(TreeItem<Category> node, Category target) {
-        if (node == null) return null;
-        if (node.getValue() == target) return node;
-        for (TreeItem<Category> child : node.getChildren()) {
-            TreeItem<Category> found = findTreeItemByCategory(child, target);
-            if (found != null) return found;
-        }
-        return null;
-    }
-
-    public void refreshQuestionTable() {
-        TreeItem<Category> selectedNode = categoryTreeView.getSelectionModel().getSelectedItem();
-        if (selectedNode != null && selectedNode.getValue() != null) {
-            Category selectedCat = selectedNode.getValue();
-            ObservableList<Question> obsList = FXCollections.observableArrayList(selectedCat.getQuestions());
-            
-            FilteredList<Question> filteredData = new FilteredList<>(obsList, q -> {
-                String searchTxt = searchQuestionField.getText();
-                boolean matchesType = activeTypeFilters.isEmpty() || activeTypeFilters.contains(q.getType());
-
-                if (searchTxt == null || searchTxt.trim().isEmpty()) {
-                    return matchesType;
-                }
-
-                String lowerSearch = searchTxt.toLowerCase();
-                boolean matchesText = false;
-                
-                int searchIndex = searchCriteriaCombo.getSelectionModel().getSelectedIndex();
-                if (searchIndex == 0) {
-                    matchesText = q.getName().toLowerCase().contains(lowerSearch);
-                } else if (searchIndex == 1) {
-                    matchesText = q.getText() != null && q.getText().toLowerCase().contains(lowerSearch);
-                }
-                
-                return matchesText && matchesType;
-            });
-            
-            SortedList<Question> sortedData = new SortedList<>(filteredData);
-            sortedData.comparatorProperty().bind(questionTableView.comparatorProperty());
-            questionTableView.setItems(sortedData);
-        } else {
-            questionTableView.setItems(FXCollections.observableArrayList());
-        }
-    }
-
-    private void populateTypeFilterMenu(Category rootCategory) {
-        typeFilterMenu.getItems().clear();
-        activeTypeFilters.clear(); 
-        updateFilterButtonStyle();
-        Set<String> uniqueTypes = new HashSet<>();
-        collectTypesRecursively(rootCategory, uniqueTypes);
-        for (String type : uniqueTypes) {
-            CheckMenuItem menuItem = new CheckMenuItem(type.toUpperCase());
-            menuItem.selectedProperty().addListener((obs, was, is) -> {
-                if (is) activeTypeFilters.add(type); else activeTypeFilters.remove(type);
-                updateFilterButtonStyle();
-                refreshQuestionTable(); 
-            });
-            typeFilterMenu.getItems().add(menuItem);
-        }
-        typeFilterMenu.setDisable(false); 
-    }
-
-    private void collectTypesRecursively(Category cat, Set<String> typesSet) {
-        for (Question q : cat.getQuestions()) typesSet.add(q.getType());
-        for (Category sub : cat.getSubcategories()) collectTypesRecursively(sub, typesSet);
-    }
-    
-    private void updateFilterButtonStyle() {
-        if (activeTypeFilters.isEmpty()) {
-            typeFilterMenu.setStyle(""); 
-            typeFilterMenu.setText(I18n.get("main.filter.type"));
-        } else {
-            typeFilterMenu.setStyle("-fx-background-color: #dc3545; -fx-border-color: #c82333; -fx-text-fill: white; -fx-font-weight: bold;");
-            typeFilterMenu.setText(I18n.get("main.filter.typeActive", String.valueOf(activeTypeFilters.size())));
-        }
-    }
-    
-    // Getters
-    public TreeView<Category> getCategoryTreeView() { return categoryTreeView; }
-    public TableView<Question> getQuestionTableView() { return questionTableView; }
-    public WebView getDetailsWebView() { return detailsWebView; }
-    public TextField getSearchCategoryField() { return searchCategoryField; }
-    public TextField getSearchQuestionField() { return searchQuestionField; }
-    public ComboBox<String> getSearchCriteriaCombo() { return searchCriteriaCombo; }
-    public MenuButton getTypeFilterMenu() { return typeFilterMenu; }
-    public Button getAddQuestionButton() { return addQuestionButton; }
-    public Button getAddCategoryButton() { return addCategoryButton; } 
-    public Button getOpenBankButton() { return openBankButton; }
-    public Button getSaveButton() { return saveButton; }
-    public Button getExportLatexButton() { return exportLatexButton; }
-    public Button getExportGiftButton() { return exportGiftButton; }
-    public Button getStatsButton() { return statsButton; }
-    public Button getDuplicatesButton() { return duplicatesButton; }
-    public Button getUndoButton() { return undoButton; }
-    public Button getRedoButton() { return redoButton; }
-    public CheckBox getClozeToggle() { return clozeToggle; }
-    public Label getFileNameLabel() { return fileNameLabel; }
-    public HBox getLanguageBox() { return languageBox; }
+    public TreeView<Category>  getCategoryTreeView()    { return categoryTreeView; }
+    public TableView<Question> getQuestionTableView()   { return questionTableView; }
+    public WebView             getDetailsWebView()      { return detailsWebView; }
+    public Label               getCounterLabel()        { return counterLabel; }
+    public TextField           getSearchCategoryField() { return searchCategoryField; }
+    public TextField           getSearchQuestionField() { return searchQuestionField; }
+    public ComboBox<String>    getSearchCriteriaCombo() { return searchCriteriaCombo; }
+    public MenuButton          getTypeFilterMenu()      { return typeFilterMenu; }
+    public Button              getAddQuestionButton()   { return addQuestionButton; }
+    public Button              getAddCategoryButton()   { return addCategoryButton; }
+    public Button              getOpenBankButton()      { return openBankButton; }
+    public Button              getSaveButton()          { return saveButton; }
+    public Button              getExportLatexButton()   { return exportLatexButton; }
+    public Button              getExportGiftButton()    { return exportGiftButton; }
+    public Button              getImportClipboardButton(){ return importClipboardButton; }
+    public Button              getStatsButton()         { return statsButton; }
+    public Button              getDuplicatesButton()    { return duplicatesButton; }
+    public Button              getUndoButton()          { return undoButton; }
+    public Button              getRedoButton()          { return redoButton; }
+    public CheckBox            getClozeToggle()         { return clozeToggle; }
+    public Label               getFileNameLabel()       { return fileNameLabel; }
+    public HBox                getLanguageBox()         { return languageBox; }
 
     public static void main(String[] args) { launch(args); }
 }
